--- a/src/components/core/select.css
+++ b/src/components/core/select.css
@@ -27,7 +27,7 @@
   width: 100%;
   background-color: #fff;
   z-index: 1;
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--select-shadow);
 }
 
 .select-options {
@@ -67,7 +67,6 @@
 }
 
 .select__search {
-  width: 75%;
   box-shadow: 0px 1px 0px rgba(0,0,0,0.15);
   text-align: center;
 }
