--- a/src/vars.css
+++ b/src/vars.css
@@ -38,6 +38,7 @@
   --header-height: 50px;
   --box-shadow-inset: inset 0px 0px 1px 0px rgba(0,0,0,0.25);
   --modal-side-menu-shadow: 2px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  --select-shadow: 0px 0px 5px rgba(0, 0, 0, .2);
 
   --edit-field-min-height: 2.5rem;
 
